tests/conc/reject/builtin.ty
fn main():
    t := spawn print("x")
    wait(t)
